--- a/app/src/main/res/layout/activity_available_doctors.xml
+++ b/app/src/main/res/layout/activity_available_doctors.xml
@@ -29,8 +29,9 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewDoctors"
         android:layout_width="350dp"
-        android:layout_height="529dp"
+        android:layout_height="500dp"
         android:layout_marginTop="16dp"
+        app:layout_constraintBottom_toTopOf="@+id/view34"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/view32" />
