--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.MyAppt" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="Theme.MyAppt" parent="Theme.AppCompat.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">#0099ff</item>
         <item name="colorPrimaryVariant">#0099ff</item>
