Made Changes to layouts and added a layout for doctors to check messages from patients

--- a/app/src/main/res/layout/activity_available_doctors.xml
+++ b/app/src/main/res/layout/activity_available_doctors.xml
@@ -19,9 +19,10 @@
     <View
         android:id="@+id/view34"
         android:layout_width="wrap_content"
-        android:layout_height="120dp"
+        android:layout_height="100dp"
         android:background="@drawable/ic_wpwwave"
         android:rotationX="180"
+        android:elevation="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -29,9 +30,8 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewDoctors"
         android:layout_width="350dp"
-        android:layout_height="500dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        app:layout_constraintBottom_toTopOf="@+id/view34"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/view32" />
