--- a/app/src/main/res/layout/patient_chatting_activity.xml
+++ b/app/src/main/res/layout/patient_chatting_activity.xml
@@ -4,14 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Chattingpage">
+    tools:context=".Patient_Chatting_Activity">
 
     <View
         android:id="@+id/view35"
         android:layout_width="wrap_content"
         android:layout_height="120dp"
+        android:background="@drawable/top_ight_curved_edges"
         android:elevation="10dp"
-        android:background="@drawable/shape_bottom_left"
+        android:rotationX="-180"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
