Added a new Home page for patients

--- a/app/src/main/res/drawable/button_white_and_blue_border_background.xml
+++ b/app/src/main/res/drawable/button_white_and_blue_border_background.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape android:shape="rectangle" xmlns:android="http://schemas.android.com/apk/res/android">
     <stroke
-        android:width="3dp"
-        android:color="#0099ff"
+        android:width="1.5dp"
+        android:color="#1A446B"
         />
     <gradient android:angle="225" android:centerColor="#ffffff" android:endColor="#ffffff" android:startColor="#ffffff"   />
     <corners android:topRightRadius="10dp" android:topLeftRadius="10dp"
