--- a/app/src/main/res/layout/activity_patient_main_page_new.xml
+++ b/app/src/main/res/layout/activity_patient_main_page_new.xml
@@ -235,6 +235,7 @@
         android:id="@+id/textView79"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
         android:elevation="2dp"
         android:text="@string/history"
         android:textColor="#1A446B"
