--- a/app/src/main/res/layout/activity_available_doctors.xml
+++ b/app/src/main/res/layout/activity_available_doctors.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AvailableDoctors">
+    tools:context=".Patient_Check_Doctors_to_Consult_New">
 
     <View
         android:id="@+id/view32"
